squid: mds: don't stall the asok thread for flush commands

Signed-off-by: Leonid Usov <leonid.usov@ibm.com>
Fixes: https://tracker.ceph.com/issues/65803
(cherry picked from commit a4dc88140071f9cdfe5654402067434728fee469)
Fixes: https://tracker.ceph.com/issues/66103